[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoforecast"
version = "0.2.0"
description = "Ultra-lightweight time series foundation model architecture (200K-1.6M params) with streaming inference and Hugging Face Hub integration."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "NanoForecast Contributors"},
    {name = "Eulogik (https://eulogik.com)"},
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0,<3.0",
    "numpy>=1.24,<3.0",
    "pandas>=1.5,<3.0",
    "requests>=2.28",
    "huggingface_hub>=0.20",
]

[project.optional-dependencies]
onnx = ["onnx>=1.14", "onnxruntime>=1.15"]
spaces = ["gradio>=4.0", "plotly>=5.0"]
deploy = ["fastapi>=0.110.0", "uvicorn[standard]>=0.27.0", "python-multipart>=0.0.6"]
dev = ["pytest>=7.0", "ruff>=0.1.0"]

[project.urls]
Homepage = "https://github.com/eulogik/NanoForecast"
Repository = "https://github.com/eulogik/NanoForecast"
Issues = "https://github.com/eulogik/NanoForecast/issues"

[project.scripts]
nanoforecast-pretrain = "pretrain:main"
nanoforecast-benchmark = "benchmark:main"

[tool.setuptools]
packages = [
    "nanoforecast",
    "nanoforecast.data",
    "nanoforecast.model",
    "nanoforecast.train",
    "nanoforecast.evaluation",
    "nanoforecast.export",
]

[tool.setuptools.package-data]
nanoforecast = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
